force-app/main/default/objects/Auction_Listing__c/Auction_Listing__c.object-meta.xml
<CustomObject>
    <description>Represents a farm equipment auction listing</description>
    <label>Auction Listing</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auction Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>