force-app/main/default/objects/Auction_Listing__c/fields/Current_Bid__c.field-meta.xml
<CustomField>
    <fullName>Current_Bid__c</fullName>
    <label>Current Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>