force-app/main/default/objects/Auction_Listing__c/fields/Current_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Current_Bidder__c</fullName>
    <label>Current Bidder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>