force-app/main/default/objects/Auction_Listing__c/fields/Ends_At__c.field-meta.xml
<CustomField>
    <fullName>Ends_At__c</fullName>
    <label>Ends At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>