force-app/main/default/objects/Auction_Listing__c/fields/Starting_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price__c</fullName>
    <label>Starting Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>